<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/laptop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LaptopFragment">

    <TextView
        android:id="@+id/Laptop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_laptop"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/labtop_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/laptopPicture"
        android:src="@drawable/laptop"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Laptop_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/laptopDetails_guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <Button
        android:id="@+id/laptop_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/laptop_detail"
        app:layout_constraintEnd_toEndOf="@id/laptopDetails_guideline50"
        app:layout_constraintStart_toStartOf="@id/laptopDetails_guideline50"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/Laptop_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_thumb_up_black_18dp"
        android:drawablePadding="14sp"
        android:gravity="center"
        android:text="@string/check_like"
        app:layout_constraintBaseline_toBaselineOf="@id/laptop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/laptop_button" />

    <TextView
        android:id="@+id/laptop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>